--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,16 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ month|title }} Challenge</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load static %}
+
+{% block css_files %}
+<link rel="stylesheet" href="{% static 'challenges/index.css' %}">
+<link rel="stylesheet" href="{% static 'challenges/challenge.css' %}">
+<link rel="stylesheet" href="{% static 'challenges/includes/header.css' %}">
+{% endblock %}
+
+{% block page_title %}{{ month|title }} Challenge{% endblock %}
+
+{% block page_content %}
+    {% include 'challenges/partials/navbar.html' %}
     <h1>{{ month|title }}'s challenge</h1>
     {% if text %}
         <h2>{{ text }}</h2>
     {% else %}
         <h2>No challenge set for this month yet!</h2>
     {% endif %}
-</body>
-</html>
+{% endblock %}
